--- a/index.html
+++ b/index.html
@@ -1,108 +1,36 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>OuassVTC - Réserver VTC à Perpignan</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>OuassVTC - Chauffeur VTC à Perpignan</title>
 
+  <!-- SEO -->
+  <meta name="description" content="OuassVTC - Chauffeur VTC privé à Perpignan et alentours. Réservation rapide, estimation instantanée, confort et sécurité garantis.">
+  <meta name="keywords" content="VTC Perpignan, Taxi Perpignan, chauffeur privé, Uber Perpignan, Bolt, Heetch, Allocab, transport aéroport, transport gare, Saint-Estève, Canet-en-Roussillon, Cabestany, Rivesaltes, Argelès-sur-Mer, Le Barcarès, Leucate, Torreilles, Saint-Cyprien, Espagne, Gérone, Figueras, Costa Brava">
+
+  <!-- Feuilles de style -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
   <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f0f2f5;
-      color: #333;
-    }
-    header, footer {
-      background-color: #000;
-      color: white;
-      text-align: center;
-      padding: 20px 10px;
-    }
-    header img {
-      max-height: 100px;
-    }
-    nav {
-      background: #111;
-      padding: 10px 0;
-      text-align: center;
-    }
-    nav a {
-      color: white;
-      margin: 0 15px;
-      text-decoration: none;
-      font-weight: 500;
-    }
-    .container {
-      max-width: 960px;
-      margin: auto;
-      padding: 20px;
-    }
-    .hero-text {
-      text-align: center;
-      margin: 30px 0;
-    }
-    .buttons {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 15px;
-      margin: 20px 0;
-    }
-    .buttons a {
-      background: #007bff;
-      color: white;
-      padding: 12px 20px;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: 500;
-    }
-    form {
-      background: #fff;
-      padding: 25px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    }
-    input, textarea, select, button {
-      width: 100%;
-      padding: 12px;
-      margin: 10px 0;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      font-size: 16px;
-    }
-    button {
-      background-color: #007bff;
-      color: white;
-      font-weight: bold;
-      border: none;
-      cursor: pointer;
-    }
-    button.green {
-      background-color: #28a745;
-    }
-    .confirmation {
-      text-align: center;
-      margin-top: 20px;
-      color: green;
-      font-weight: bold;
-    }
-    #map {
-      height: 300px;
-      margin-top: 20px;
-      border-radius: 10px;
-    }
-    #google_translate_element {
-      text-align: center;
-      margin-top: 30px;
-    }
+    body{font-family:'Segoe UI',sans-serif;margin:0;padding:0;background:#f0f2f5;color:#333}
+    header,footer{background:#000;color:#fff;text-align:center;padding:20px 10px}
+    header img{max-height:100px}
+    nav{background:#111;padding:10px 0;text-align:center}
+    nav a{color:#fff;margin:0 15px;text-decoration:none;font-weight:500}
+    .container{max-width:960px;margin:auto;padding:20px}
+    .hero-text{text-align:center;margin:30px 0}
+    .buttons{display:flex;flex-wrap:wrap;justify-content:center;gap:15px;margin:20px 0}
+    .buttons a{background:#007bff;color:#fff;padding:12px 20px;border-radius:8px;text-decoration:none;font-weight:500}
+    .form-section{background:#fff;padding:25px;border-radius:10px;box-shadow:0 4px 10px rgba(0,0,0,.1)}
+    input,textarea,select,button{width:100%;padding:12px;margin:10px 0;border-radius:6px;border:1px solid #ccc;font-size:16px}
+    button{background:#007bff;color:#fff;font-weight:bold;border:none;cursor:pointer}
+    button.green{background:#28a745}
+    .confirmation{text-align:center;margin-top:20px;color:green;font-weight:bold}
+    #map{height:300px;margin-top:20px;border-radius:10px}
+    #google_translate_element{text-align:center;margin-top:30px}
   </style>
 
-  <!-- Google tag (gtag.js) - AVANCÉ -->
+  <!-- Google Analytics (GA4) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-5BG2J1H8TC"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -110,22 +38,15 @@
     gtag('js', new Date());
     gtag('config', 'G-5BG2J1H8TC');
 
-    // Suivi des événements (clics, formulaires, etc.)
-    function trackEvent(action, label) {
+    function trackEvent(action,label){
       gtag('event', action, {
         'event_category': 'interaction',
         'event_label': label,
         'value': 1
       });
     }
-
-    // Suivi automatique des pages visitées (FAQ, Services, etc.)
-    document.addEventListener("DOMContentLoaded", () => {
-      const currentPage = document.title;
-      gtag('event', 'page_view', {
-        page_title: currentPage,
-        page_location: window.location.href
-      });
+    document.addEventListener("DOMContentLoaded",()=>{
+      gtag('event','page_view',{page_title:document.title,page_location:window.location.href});
     });
   </script>
 </head>
@@ -138,7 +59,7 @@
   </nav>
 
   <header>
-    <img src="ouassvtc.png" alt="Logo OuassVTC" />
+    <img src="ouassvtc.png" alt="Logo OuassVTC">
   </header>
 
   <div class="container">
@@ -155,18 +76,15 @@
 
     <div class="form-section">
       <form onsubmit="sendEmail(event)">
-        <input type="text" id="nom" placeholder="Nom" required />
-        <input type="tel" id="telephone" placeholder="Téléphone" required />
-        <input type="text" id="depart" placeholder="Adresse de départ" required />
-        <input type="text" id="arrivee" placeholder="Adresse d'arrivée" required />
+        <input type="text" id="nom" placeholder="Nom" required>
+        <input type="tel" id="telephone" placeholder="Téléphone" required>
+        <input type="text" id="depart" placeholder="Adresse de départ" required>
+        <input type="text" id="arrivee" placeholder="Adresse d'arrivée" required>
         <label for="dateheure">Date de la réservation</label>
-        <input type="datetime-local" id="dateheure" name="dateheure" required />
+        <input type="datetime-local" id="dateheure" name="dateheure" required>
         <select id="passagers" required>
           <option value="">Nombre de passagers</option>
-          <option value="1">1</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="4">4</option>
+          <option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option>
         </select>
         <textarea id="message" placeholder="Informations complémentaires..."></textarea>
         <div id="prixEstime" class="confirmation">Distance : -- km | Estimation : -- €</div>
@@ -179,110 +97,85 @@
     <div id="google_translate_element"></div>
   </div>
 
-  <footer>
-    © 2025 OuassVTC - Tous droits réservés. Contact : contact@ouassvtc.fr
-  </footer>
+  <footer>© 2025 OuassVTC - Tous droits réservés. Contact : contact@ouassvtc.fr</footer>
 
   <!-- Google Translate -->
   <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   <script>
-    function googleTranslateElementInit() {
-      new google.translate.TranslateElement({ pageLanguage: 'fr' }, 'google_translate_element');
+    function googleTranslateElementInit(){
+      new google.translate.TranslateElement({pageLanguage:'fr'},'google_translate_element');
     }
   </script>
 
-  <!-- EmailJS + Estimation + Map + Analytics -->
+  <!-- EmailJS + Estimation + Map -->
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script>
     emailjs.init("U08QGWWRUenJDOllc");
-    let formEnvoye = false;
-
-    function sendEmail(event) {
+    let formEnvoye=false;
+    function sendEmail(event){
       event.preventDefault();
-      if (formEnvoye) return alert("Votre demande a déjà été envoyée.");
-
-      const params = {
-        nom: nom.value,
-        telephone: telephone.value,
-        depart: depart.value,
-        arrivee: arrivee.value,
-        dateheure: dateheure.value,
-        passagers: passagers.value,
-        message: message.value,
-        prix: document.getElementById("prixEstime").innerText
+      if(formEnvoye)return alert("Votre demande a déjà été envoyée.");
+      const params={
+        nom:nom.value,telephone:telephone.value,depart:depart.value,arrivee:arrivee.value,
+        dateheure:dateheure.value,passagers:passagers.value,message:message.value,
+        prix:document.getElementById("prixEstime").innerText
       };
-
-      emailjs.send("service_kdvgh9f", "template_5xt5vlv", params)
-        .then(() => {
-          formEnvoye = true;
+      emailjs.send("service_kdvgh9f","template_5xt5vlv",params)
+        .then(()=>{
+          formEnvoye=true;
           trackEvent('formulaire_envoye','Réservation envoyée');
-          document.querySelector(".form-section").innerHTML = `
-            <div style="text-align: center; padding: 40px 20px;">
-              <h2 style="color: #28a745; font-size: 28px;">✅ Demande envoyée !</h2>
-              <p style="margin-top: 10px; font-size: 18px;">Nous vous contacterons rapidement.</p>
-              <button onclick="window.location.reload()" style="margin-top: 30px; padding: 12px 24px; background-color: #007bff; border: none; color: white; border-radius: 6px; font-size: 16px; cursor: pointer;">
+          document.querySelector(".form-section").innerHTML=`
+            <div style="text-align:center;padding:40px 20px;">
+              <h2 style="color:#28a745;font-size:28px;">✅ Demande envoyée !</h2>
+              <p style="margin-top:10px;font-size:18px;">Nous vous contacterons rapidement.</p>
+              <button onclick="window.location.reload()" style="margin-top:30px;padding:12px 24px;background:#007bff;border:none;color:white;border-radius:6px;font-size:16px;cursor:pointer;">
                 Faire une nouvelle demande
               </button>
-            </div>
-          `;
-        })
-        .catch(() => {
-          alert("❌ Une erreur est survenue. Veuillez réessayer.");
-        });
+            </div>`;
+        }).catch(()=>alert("❌ Une erreur est survenue. Veuillez réessayer."));
     }
 
-    function calculerEstimation() {
-      const d = depart.value, a = arrivee.value;
-      if (!d || !a) return alert("Veuillez entrer les adresses");
-
+    function calculerEstimation(){
+      const d=depart.value,a=arrivee.value;
+      if(!d||!a)return alert("Veuillez entrer les adresses");
       fetch(`https://nominatim.openstreetmap.org/search?q=${encodeURIComponent(d)}&format=json&limit=1`)
-        .then(res => res.json()).then(data1 => {
-          if (!data1.length) throw "Erreur départ";
-          const start = `${data1[0].lon},${data1[0].lat}`;
+        .then(res=>res.json()).then(data1=>{
+          if(!data1.length)throw"Erreur départ";
+          const start=`${data1[0].lon},${data1[0].lat}`;
           fetch(`https://nominatim.openstreetmap.org/search?q=${encodeURIComponent(a)}&format=json&limit=1`)
-            .then(res => res.json()).then(data2 => {
-              if (!data2.length) throw "Erreur arrivée";
-              const end = `${data2[0].lon},${data2[0].lat}`;
+            .then(res=>res.json()).then(data2=>{
+              if(!data2.length)throw"Erreur arrivée";
+              const end=`${data2[0].lon},${data2[0].lat}`;
               fetch(`https://router.project-osrm.org/route/v1/driving/${start};${end}?overview=false`)
-                .then(res => res.json()).then(route => {
-                  const dist = route.routes[0].distance / 1000;
-                  let prix = 20 + Math.max(0, dist - 7) * 1.6;
-                  prixEstime.innerText = `Distance : ${dist.toFixed(1)} km | Estimation : ${prix.toFixed(2)} €`;
+                .then(res=>res.json()).then(route=>{
+                  const dist=route.routes[0].distance/1000;
+                  let prix=20+Math.max(0,dist-7)*1.6;
+                  prixEstime.innerText=`Distance : ${dist.toFixed(1)} km | Estimation : ${prix.toFixed(2)} €`;
                   trackEvent('estimation_tarif','Tarif estimé');
                 });
             });
-        })
-        .catch(() => {
-          prixEstime.innerText = "Estimation impossible.";
-        });
+        }).catch(()=>{prixEstime.innerText="Estimation impossible.";});
     }
 
-    // Map + suivi géographique
-    let map = L.map('map').setView([42.7, 2.9], 12);
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      attribution: '&copy; OpenStreetMap contributors'
-    }).addTo(map);
-
-    navigator.geolocation.getCurrentPosition(pos => {
-      const lat = pos.coords.latitude;
-      const lon = pos.coords.longitude;
-      const latlng = [lat, lon];
+    let map=L.map('map').setView([42.7,2.9],12);
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{attribution:'&copy; OpenStreetMap'}).addTo(map);
+    navigator.geolocation.getCurrentPosition(pos=>{
+      const lat=pos.coords.latitude,lon=pos.coords.longitude,latlng=[lat,lon];
       L.marker(latlng).addTo(map).bindPopup("Vous êtes ici").openPopup();
-      map.setView(latlng, 13);
-
-      // Suivi géographique
+      map.setView(latlng,13);
       fetch(`https://nominatim.openstreetmap.org/reverse?lat=${lat}&lon=${lon}&format=json`)
-        .then(res => res.json())
-        .then(data => {
-          if (data.address) {
-            const ville = data.address.city || data.address.town || data.address.village || "Ville inconnue";
-            trackEvent('visite_geo', `Visiteur depuis ${ville}`);
+        .then(res=>res.json()).then(data=>{
+          if(data.address){
+            const ville=data.address.city||data.address.town||data.address.village||"Ville inconnue";
+            trackEvent('visite_geo',`Visiteur depuis ${ville}`);
           }
         });
     });
   </script>
 
-  <!-- SEO caché (mots-clés et villes) -->
-  <div style="display: none;">
+  <!-- SEO caché -->
+  <div style="display:none;">
     VTC Perpignan, chauffeur privé, taxi 66, Uber Perpignan, Bolt Perpignan, Heetch Perpignan, Allocab Perpignan, G7 Perpignan,
     Saint-Estève, Canet-en-Roussillon, Cabestany, Rivesaltes, Argelès-sur-Mer, Le Barcarès, Leucate, Torreilles, Sainte-Marie-la-Mer,
     Bompas, Pia, Saint-Cyprien, Cerbère, Banyuls-sur-Mer, Port-Vendres, Collioure, Espagne, Gérone, Figueras, Costa Brava, Barcelone,
